--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Welcome to the Legacy Map Editor Installer</h1>
         <p>Download and install the latest version of the Legacy Map Editor by clicking the link below.</p>
-        <a href="https://saibanjin.github.io/LegacyMapEditorUpdates/LegacyMapEditorInstaller.exe">Download Installer</a>
+        <a href="https://saibanjin.github.io/LegacyMapEditorUpdates/packages/org.gatewaydev.legacymapeditor/data/LegacyMapEditorInstaller.exe">Download Installer</a>
         <p>Version: 1.0.0</p>
         <p>Published by: Gateway Development L.L.C.</p>
     </div>
