--- a/index.html
+++ b/index.html
@@ -1,53 +1,45 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Legacy Map Editor Installer</title>  
-    <style>  
-        body {  
-            font-family: Arial, sans-serif;  
-            background-color: #f4f4f4;  
-            margin: 0;  
-            padding: 0;  
-        }  
-        .container {  
-            width: 80%;  
-            margin: 0 auto;  
-            padding: 20px;  
-            background-color: white;  
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);  
-            text-align: center;  
-        }  
-        h1 {  
-            color: #333;  
-        }  
-        p {  
-            font-size: 18px;  
-            line-height: 1.6;  
-        }  
-        .download-button {  
-            display: inline-block;  
-            padding: 10px 20px;  
-            background-color: #007bff;  
-            color: white;  
-            text-decoration: none;  
-            font-size: 18px;  
-            border-radius: 5px;  
-            margin-top: 20px;  
-        }  
-        .download-button:hover {  
-            background-color: #0056b3;  
-        }  
-    </style>  
-</head>  
-<body>  
-    <div class="container">  
-        <h1>Welcome to the Legacy Map Editor Installer</h1>  
-        <p>Download and install the latest version of the Legacy Map Editor by clicking the link below.</p>  
-        <a href="https://saibanjin.github.io/LegacyMapEditorUpdates/packages/org.gatewaydev.legacymapeditor/data/LegacyMapEditorInstaller.exe">Download Installer</a>  
-        <p>Version: 1.0.0</p>  
-        <p>Published by: Gateway Development L.L.C.</p>  
-    </div>  
-</body>  
-</html>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Legacy Map Editor - Installer Download</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .container {
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        .download-link {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+        .download-link:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Download Legacy Map Editor Installer</h1>
+        <p>Click the button below to download the latest version of the installer.</p>
+        <a href="C:/Users/Saiba/OneDrive/PlayFiles/Documents/GitHub/LegacyMapEditorUpdates/packages/org.gatewaydev.legacymapeditor/data/LegacyMapEditorInstaller.exe" class="download-link">Download Installer</a>
+    </div>
+</body>
+</html>
