--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
         <h1>Download Legacy Map Editor Installer</h1>
         <p>Click the button below to download the latest version of the installer.</p>
-        <a href="C:/Users/Saiba/OneDrive/PlayFiles/Documents/GitHub/LegacyMapEditorUpdates/packages/org.gatewaydev.legacymapeditor/data/LegacyMapEditorInstaller.exe" class="download-link">Download Installer</a>
+        <a href="https://saibanjin.github.io/LegacyMapEditorUpdates/packages/org.gatewaydev.legacymapeditor/data/LegacyMapEditorInstaller.exe" class="download-link">Download Installer</a>
     </div>
 </body>
 </html>
